--- a/Assignment_1/Assign1.tex
+++ b/Assignment_1/Assign1.tex
@@ -271,19 +271,19 @@ $A$ : Probability of random student passing the first exam
 
 $B$ : Probability of random student passing the second exam
 
-Given $$P(A) = 0.8$$ and $$P(B) = 0.7$$
+Given $$\pr{A} = 0.8$$ and $$\pr{B} = 0.7$$
 
-It is also given that $$P(A + B) = 0.95$$
-Now we have to find $$P(AB)$$
-We know that $$P(A + B) = P(A) + P(B) - P(AB)$$
+It is also given that $$\pr{A + B} = 0.95$$
+Now we have to find $$\pr{AB}$$
+We know that $$\pr{A + B} = \pr{A} + \pr{B} - \pr{AB}$$
 On rearranging the above equation we get,
 
-$$P(AB) = P(A) + P(B) - P(A + B)$$
+$$\pr{AB} = \pr{A} + \pr{B} - \pr{A + B}$$
 
 Substituting all the given values in the above equation
-$$P(AB) = 0.8 + 0.7 -0.95$$ 
-$$P(AB) = 1.5 - 0.95$$
-$$P(AB) = 0.55$$
+$$\pr{AB} = 0.8 + 0.7 -0.95$$ 
+$$\pr{AB} = 1.5 - 0.95$$
+$$\pr{AB} = 0.55$$
 \begin{center}
 $\therefore $ The probability of a randomly chosen student passing both is $0.55$.
 \end{center}
