--- a/report_software/report.tex
+++ b/report_software/report.tex
@@ -294,5 +294,11 @@ The project successfully achieves its objective of creating a random audio playe
 
 In summary, the random audio player project demonstrates the effective utilization of Python libraries to create an interactive and enjoyable audio playback experience.
 
-
+\section*{Output} 
+	Random numbers are generated on the display.
+	\begin{figure}[h]
+		\includegraphics[width=\linewidth]{img.jpg}
+		\caption{output}
+		\label{output}
+	\end{figure}
 \end{document}
