--- a/tex/report.tex
+++ b/tex/report.tex
@@ -6,6 +6,7 @@
 %\IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
+\usepackage{caption}
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \usepackage{algorithmic}
 \usepackage{graphicx}
@@ -296,9 +297,14 @@ In summary, the random audio player project demonstrates the effective utilizati
 
 \section*{Output} 
 	Random numbers are generated on the display.
+	\centering
+	\captionsetup{justification=centering}
 	\begin{figure}[h]
 		\includegraphics[width=\linewidth]{img.jpg}
+		\begin{center}
 		\caption{output}
+		\end{center}
 		\label{output}
 	\end{figure}
+
 \end{document}
